--- a/console/src/main/resources/application.properties
+++ b/console/src/main/resources/application.properties
@@ -29,15 +29,15 @@ server.servlet.contextPath=/nacos
 
 #*************** Config Module Related Configurations ***************#
 ### If use MySQL as datasource:
-# spring.datasource.platform=mysql
+spring.datasource.platform=mysql
 
 ### Count of DB:
-# db.num=1
+db.num=1
 
 ### Connect URL of DB:
-# db.url.0=jdbc:mysql://127.0.0.1:3306/nacos?characterEncoding=utf8&connectTimeout=1000&socketTimeout=3000&autoReconnect=true&useUnicode=true&useSSL=false&serverTimezone=UTC
-# db.user.0=nacos
-# db.password.0=nacos
+db.url.0=jdbc:mysql://122.224.168.146:15800/nacos_config?characterEncoding=utf8&connectTimeout=1000&socketTimeout=3000&autoReconnect=true&useUnicode=true&useSSL=false&serverTimezone=UTC
+db.user.0=mysql
+db.password.0=Linkcld123456.
 
 #*************** Naming Module Related Configurations ***************#
 ### Data dispatch task execution period in milliseconds:
@@ -93,7 +93,7 @@ management.metrics.export.influx.enabled=false
 #*************** Access Log Related Configurations ***************#
 ### If turn on the access log:
 server.tomcat.accesslog.enabled=true
-
+logging.level.root=debug
 ### The access log pattern:
 server.tomcat.accesslog.pattern=%h %l %u %t "%r" %s %b %D %{User-Agent}i %{Request-Source}i
 
